samples/_failures_safe/1761221462_918b3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d351d07.c: In function ‘main’:
./samples/SAFE/__tmp_9d351d07.c:144:9: error: ‘add’ undeclared (first use in this function)
  144 |         add
      |         ^~~
./samples/SAFE/__tmp_9d351d07.c:144:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9d351d07.c:144:12: error: expected ‘;’ at end of input
  144 |         add
      |            ^
      |            ;
./samples/SAFE/__tmp_9d351d07.c:144:9: error: expected declaration or statement at end of input
  144 |         add
      |         ^~~
./samples/SAFE/__tmp_9d351d07.c:144:9: error: expected declaration or statement at end of input
